<resources>
    <string name="app_name">盈未来</string>

    <string name="more"><u>更多</u></string>
    <string name="input_username">请输入用户名</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_regist_phone">请输入您注册的手机号</string>
    <string name="input_bind_phone">请输入您要绑定的手机号</string>
    <string name="input_code">请输入手机验证码</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_normal_psw">请填写6-16位新密码</string>
    <string name="input_old_psw">请输入原账户密码</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="welcome">欢迎加入赢未来</string>
    <string name="get_number">获取验证码</string>
    <string name="get_phone_number">获取手机验证码</string>
    <string name="i_read_and_agree">我已阅读并同意</string>
    <string name="regist_text">《注册协议》</string>
    <string name="regist_now">注册</string>
    <string name="submit">提交</string>
    <string name="student">我是学生</string>
    <string name="teacher">我是教师</string>
    <string name="forget_psw">忘记密码</string>
    <string name="account_login">账号登录</string>
    <string name="other_login">其他登录</string>
    <string name="news_headlines">资讯头条</string>
    <string name="comments">评论跟帖</string>
    <string name="write_comments">写评论...</string>
    <string name="shaixuan">筛选</string>
    <string name="book">图书</string>
    <string name="xueke">学科</string>
    <string name="version">版本</string>
    <string name="grade">年级</string>
    <string name="reset">重置</string>
    <string name="done">完成</string>
    <string name="write_right_phone_number">请输入正确的手机号</string>
    <string name="write_phone_number">请输入手机号</string>
    <string name="write_right_phone_code">请输入正确的验证码</string>
    <string name="phone_code_error">验证码输入有误，请重新输入</string>
    <string name="write_right_phone_psw">请输入密码</string>
    <string name="write_six_phone_psw">请输入6-16位新密码</string>
    <string name="agree_regist_agreement">请同意注册协议</string>
    <string name="phone_code_time_out">验证码超时，请重新获取验证码</string>
    <string name="set_top">置顶</string>
    <string name="hot">热点</string>
    <string name="keep_net_safe_rule">请遵守互联网言语相关规定...</string>
    <string name="release">发布</string>
    <string name="comments_content">评论内容不能为空</string>
    <string name="home_page">首页</string>
    <string name="order_list">订单</string>
    <string name="shopping_car">购物车</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="input_key_word">请输入关键字</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="clean">清空</string>
    <string name="need_login_first">请先登录</string>
    <string name="old_reply">原评论</string>
    <string name="all_reply">全部回复</string>
    <string name="write_reply">写回复...</string>
    <string name="reply">回复</string>
    <string name="all_check">全选</string>
    <string name="delete">删除</string>
    <string name="editOrCancel">编辑/取消</string>
    <string name="just_loading">正在下载</string>
    <string name="load_finish">下载完成</string>
    <string name="setting">设置</string>
    <string name="sign_in">签到</string>
    <string name="gold_vip">黄金会员</string>
    <string name="diamond_vip">钻石会员</string>
    <string name="normal_vip">普通会员</string>
    <string name="vip_center">会员中心</string>
    <string name="explain">说明</string>
    <string name="exit_login">退出登录</string>
    <string name="bind_now">立即绑定</string>

</resources>
