<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_teacher"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_blue_choose">

                    <FrameLayout
                        android:id="@+id/framelayout"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_blue_choose_student"
                        android:gravity="center"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:onClick="onClick1"
                        android:id="@+id/ll_student"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_student"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@mipmap/img_white_student" />

                        <TextView
                            android:id="@+id/tv_student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student"
                            android:textColor="@color/light_orange"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:onClick="onClick2"
                        android:id="@+id/ll_teacher"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/ll_student"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_teacher"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@mipmap/img_blue_teacher" />

                        <TextView
                            android:id="@+id/tv_teacher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/teacher"
                            android:textColor="@color/light_orange"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/et_phone"
            style="@style/MyEditTextStyle"
            android:layout_marginTop="18dp"
            android:drawableLeft="@mipmap/img_human"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/img_number"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6" />

            <LinearLayout
                android:id="@+id/ll_get_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_get_number_orange"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_get_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/get_number"
                    android:textColor="@color/normal_orange"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/et_psw"
            style="@style/MyEditTextStyle"
            android:layout_marginTop="18dp"
            android:drawableLeft="@mipmap/img_lock"
            android:hint="@string/input_psw"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_isAgree"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@mipmap/img_no_read" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/i_read_and_agree"
                android:textColor="@color/light_gray10"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tv_regist_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_text"
                android:textColor="@drawable/regist_agreement_selector"
                android:textSize="9sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_regist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_login_light_btn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/regist_now"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>