<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_white_head" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            style="@style/MyEditTextStyle"
            android:drawableLeft="@mipmap/img_human"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:maxLength="16" />

        <EditText
            android:id="@+id/et_psw"
            style="@style/MyEditTextStyle"
            android:layout_marginTop="18dp"
            android:drawableLeft="@mipmap/img_lock"
            android:hint="@string/input_psw"
            android:inputType="number"
            android:maxLength="16" />

        <LinearLayout
            android:id="@+id/ll_commit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_login_light_btn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/bind_now"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>