<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/normal_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/line_home_page"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/grayone" />

        <View
            android:id="@+id/line_order_list"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/grayone" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <View
            android:id="@+id/line_message"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/grayone" />

        <View
            android:id="@+id/line_mine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/grayone" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_img_selector"
            android:button="@null"
            android:drawableTop="@mipmap/icon_home_page_gray"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/home_page"
            android:textColor="@color/rb_tv_selector"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_order_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:drawableTop="@mipmap/icon_order_list_gray"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/order_list"
            android:textColor="@color/rb_tv_selector"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_shopping_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:drawableTop="@drawable/img_shopping_car"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/shopping_car"
            android:textColor="@color/rb_tv_selector"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:drawableTop="@mipmap/icon_message_gray"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/message"
            android:textColor="@color/rb_tv_selector"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:drawableTop="@mipmap/icon_mine_gray"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:text="@string/mine"
            android:textColor="@color/rb_tv_selector"
            android:textSize="11sp" />

    </RadioGroup>
</LinearLayout>